cluster/media/radarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forward-auth@kubernetescrd,traefik-strip-csp@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mm-radarr
                port:
                  number: 7878
